[project]
name = "rcd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "rank-bm25>=0.2.2",
    "tokenizer>=3.6.4",
    "torch>=2.13.0",
    "tqdm>=4.68.4",
    "transformers>=5.14.1",
]
